# mev-bundle-generator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: address_book.rs  arbitrage.rs  compound.rs  constants.rs  evm.rs  flashbots.rs  gas.rs  lib.rs  main.rs  markets.rs  sushiswap.rs  uniswap.rs  utilities.rs  wallet.rs  weth_token.rs
src/abis/: ApeBank.json  EnsureReward.json  Multicall.json  UniswapV2FlashQuery.json  chi.json
src/contracts/: ApeBankV3.sol  UniswapFlashQuery.sol
src/contracts/Valorem/: Multicall.sol  MulticallFactory.sol  MulticallInterface.sol  MulticallTest.sol
src/protocols/alpha_homora/v1/abis/: sushi_goblin.json
src/protocols/compound/: ceth.json
src/protocols/sushiswap/abis/: sushi_chef.json
src/protocols/uniswap/v2/abis/: pair.json
